--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Where to sell Items</title>
+  <title>Mob Drop Table</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
   <style>
     body { font-family: sans-serif; padding: 20px; }
@@ -12,11 +12,11 @@
   </style>
 </head>
 <body>
-  <h2>Where to sell Items</h2>
+  <h2>Mob Drop Table</h2>
   <table id="data-table"></table>
 
   <script>
-    fetch("https://docs.google.com/spreadsheets/d/e/2PACX-1vRPeOHz_lYh0s1_ZoiQ5ruNz2wYBPFqDiCXbxzUqgDb5qsd6ZSBws4_xqCKfbhkxTEujqOy1vKrgGHE/pub?gid=1348749376&single=true&output=csv")
+    fetch("https://docs.google.com/spreadsheets/d/e/2PACX-1vRPeOHz_lYh0s1_ZoiQ5ruNz2wYBPFqDiCXbxzUqgDb5qsd6ZSBws4_xqCKfbhkxTEujqOy1vKrgGHE/pub?gid=23151082&single=true&output=csv")
       .then(response => response.text())
       .then(csvText => {
         const results = Papa.parse(csvText, {
