--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     table { border-collapse: collapse; width: 100%; }
     th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
     th { background-color: #f2f2f2; }
+    .separator-row td {
+      background-color: black !important;
+      height: 10px;
+      padding: 0;
+      border: none;
+    }
   </style>
 </head>
 <body>
@@ -21,17 +27,12 @@
       .then(csvText => {
         const results = Papa.parse(csvText, {
           header: true,
-          skipEmptyLines: true
+          skipEmptyLines: false
         });
         const data = results.data;
 
         const table = document.getElementById("data-table");
         table.innerHTML = "";
-
-        if (data.length === 0) {
-          table.innerHTML = "<tr><td>No data found</td></tr>";
-          return;
-        }
 
         const headers = Object.keys(data[0]);
         const thead = document.createElement("tr");
@@ -43,12 +44,21 @@
         table.appendChild(thead);
 
         data.forEach(row => {
+          const isSeparator = Object.values(row).every(value => value.trim() === "");
           const tr = document.createElement("tr");
-          headers.forEach(header => {
+
+          if (isSeparator) {
+            tr.className = "separator-row";
             const td = document.createElement("td");
-            td.innerText = row[header];
+            td.colSpan = headers.length;
             tr.appendChild(td);
-          });
+          } else {
+            headers.forEach(header => {
+              const td = document.createElement("td");
+              td.innerText = row[header];
+              tr.appendChild(td);
+            });
+          }
           table.appendChild(tr);
         });
       })
