--- a/index.html
+++ b/index.html
@@ -12,12 +12,6 @@
     table {
       border-collapse: collapse;
     }
-    .black-bar {
-      background: black;
-      height: 5px;
-      padding: 0;
-      border: none;
-    }
   </style>
 </head>
 <body>
@@ -25,7 +19,7 @@
   <div id="table-container">Loading...</div>
 
   <script>
-    fetch("https://docs.google.com/spreadsheets/d/e/2PACX-1vRPeOHz_lYh0s1_ZoiQ5ruNz2wYBPFqDiCXbxzUqgDb5qsd6ZSBws4_xqCKfbhkxTEujqOy1vKrgGHE/pub?gid=932525004&single=true&output=csv")
+    fetch("https://docs.google.com/spreadsheets/d/e/2PACX-1vRPeOHz_lYh0s1_ZoiQ5ruNz2wYBPFqDiCXbxzUqgDb5qsd6ZSBws4_xqCKfbhkxTEujqOy1vKrgGHE/pub?gid=23151082&single=true&output=csv")
       .then(response => response.text())
       .then(data => {
         const rows = data.split("\n").map(row => row.split(","));
@@ -39,12 +33,15 @@
 
         for (let i = 1; i < rows.length; i++) {
           const row = rows[i];
-          const isBlackBar = row.every(cell => cell.trim() === "");
+          const isSeparatorRow = row[0].trim().toLowerCase() === "separator" &&
+                                 row.slice(1).every(cell => cell.trim() === "");
 
-          if (isBlackBar) {
-            tableHTML += `<tr><td class="black-bar" colspan="${rows[0].length}"></td></tr>`;
+          if (isSeparatorRow) {
+            tableHTML += `<tr><td colspan="${rows[0].length}" style="background:black;height:5px;padding:0;"></td></tr>`;
             continue;
           }
+
+          if (row.every(cell => cell.trim() === "")) continue;
 
           tableHTML += "<tr>";
           row.forEach(cell => {
