--- a/index.html
+++ b/index.html
@@ -1,62 +1,97 @@
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Mob Drops</title>
-  <meta charset="UTF-8" />
-  <style>
-    th, td {
-      color: white;
-      border: 1px solid #ccc;
-      padding: 6px;
-    }
-    table {
-      border-collapse: collapse;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Mob Drops</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #1a1a1a;
+            color: #f1f1f1;
+            padding: 20px;
+        }
+        h1 {
+            text-align: center;
+            color: #ffffff;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            background-color: #2b2b2b;
+        }
+        th, td {
+            border: 1px solid #444;
+            padding: 10px;
+            text-align: center;
+        }
+        th {
+            background-color: #333;
+        }
+        tr:nth-child(even) {
+            background-color: #242424;
+        }
+        .separator td {
+            background-color: black !important;
+            height: 5px;
+            padding: 0;
+            border: none;
+        }
+    </style>
 </head>
 <body>
-  <h1>Mob Drops</h1>
-  <div id="table-container">Loading...</div>
+    <h1>Mob Drops</h1>
+    <table id="mob-drops-table">
+        <thead></thead>
+        <tbody></tbody>
+    </table>
 
-  <script>
-    fetch("https://docs.google.com/spreadsheets/d/e/2PACX-1vRPeOHz_lYh0s1_ZoiQ5ruNz2wYBPFqDiCXbxzUqgDb5qsd6ZSBws4_xqCKfbhkxTEujqOy1vKrgGHE/pub?gid=23151082&single=true&output=csv")
-      .then(response => response.text())
-      .then(data => {
-        const rows = data.split("\n").map(row => row.split(","));
-        let tableHTML = "<table><thead><tr>";
+    <script>
+        fetch("https://docs.google.com/spreadsheets/d/e/2PACX-1vRPeOHz_lYh0s1_ZoiQ5ruNz2wYBPFqDiCXbxzUqgDb5qsd6ZSBws4_xqCKfbhkxTEujqOy1vKrgGHE/pub?gid=23151082&single=true&output=csv")
+            .then(response => response.text())
+            .then(csv => {
+                const rows = csv.trim().split(/\r?\n/).map(row => row.match(/(".*?"|[^",]+)(?=,|$)/g));
+                const thead = document.querySelector("#mob-drops-table thead");
+                const tbody = document.querySelector("#mob-drops-table tbody");
 
-        rows[0].forEach(header => {
-          tableHTML += `<th>${header.replace(/_\d+$/, "")}</th>`;
-        });
+                if (rows.length === 0) return;
 
-        tableHTML += "</tr></thead><tbody>";
+                const headerRow = document.createElement("tr");
+                rows[0].forEach(header => {
+                    const th = document.createElement("th");
+                    th.textContent = header.replace(/_\d+$/, "");
+                    headerRow.appendChild(th);
+                });
+                thead.appendChild(headerRow);
 
-        for (let i = 1; i < rows.length; i++) {
-          const row = rows[i];
-          const isSeparatorRow = row[0].trim().toLowerCase() === "separator" &&
-                                 row.slice(1).every(cell => cell.trim() === "");
+                for (let i = 1; i < rows.length; i++) {
+                    const row = rows[i];
+                    const isSeparator = row[0] && row[0].trim().toLowerCase() === "separator" &&
+                                        row.slice(1).every(cell => cell.trim() === "");
 
-          if (isSeparatorRow) {
-            tableHTML += `<tr><td colspan="${rows[0].length}" style="background:black;height:5px;padding:0;"></td></tr>`;
-            continue;
-          }
+                    if (isSeparator) {
+                        const sepRow = document.createElement("tr");
+                        sepRow.className = "separator";
+                        sepRow.innerHTML = `<td colspan="${rows[0].length}"></td>`;
+                        tbody.appendChild(sepRow);
+                        continue;
+                    }
 
-          if (row.every(cell => cell.trim() === "")) continue;
+                    if (row.every(cell => cell.trim() === "")) continue;
 
-          tableHTML += "<tr>";
-          row.forEach(cell => {
-            tableHTML += `<td>${cell}</td>`;
-          });
-          tableHTML += "</tr>";
-        }
-
-        tableHTML += "</tbody></table>";
-        document.getElementById("table-container").innerHTML = tableHTML;
-      })
-      .catch(error => {
-        document.getElementById("table-container").innerHTML = "Error loading data";
-        console.error("CSV fetch error:", error);
-      });
-  </script>
+                    const tr = document.createElement("tr");
+                    row.forEach(cell => {
+                        const td = document.createElement("td");
+                        td.textContent = cell.replace(/^"|"$/g, "");
+                        tr.appendChild(td);
+                    });
+                    tbody.appendChild(tr);
+                }
+            })
+            .catch(error => {
+                document.querySelector("#mob-drops-table").outerHTML = "<p>Error loading data.</p>";
+                console.error("CSV fetch error:", error);
+            });
+    </script>
 </body>
 </html>
